# M-S_scara_robot

./: README.md
Arduino_to_ros_final/: Arduino_to_ros_final.ino
arduino_interface/: package.xml  setup.cfg  setup.py
arduino_interface/arduino_interface/: arduino_node.py  arduino_node.py.txt  orientation_to_position_node.py  position_tracker_node.py
arduino_interface/launch/: start_imu.launch.py  start_tracker.launch.py
dynamixel_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel_hardware_interface/include/dynamixel_hardware_interface/: dynamixel_hardware_interface.hpp
dynamixel_hardware_interface/include/dynamixel_hardware_interface/dynamixel/: dynamixel.hpp  dynamixel_info.hpp
dynamixel_hardware_interface/param/dxl_model/: ffw_sg2_drive_1.model  ffw_sg2_drive_2.model  ffw_sg2_drive_3.model  ffw_sg2_steer_1.model  ffw_sg2_steer_2.model  ffw_sg2_steer_3.model  omy_end_rh_p12_rn.model  ph42_020_s300.model  rh_p12_rn.model  sensorxel_joy.model  xc330_t181.model  xc330_t288.model  xd540_t270.model  xh430_v210.model  xh540_w150.model  xh540_w270.model  xl320.model  xl330_m288.model  xl430_w250.model  xw430_t200.model  ym080_230_a099.model  ym080_230_b001.model
dynamixel_hardware_interface/src/: dynamixel_hardware_interface.cpp
dynamixel_hardware_interface/src/dynamixel/: dynamixel.cpp  dynamixel_info.cpp
scara_control/: package.xml  setup.py  shadow_controller_node.py
scara_control/scara_control/: scara_ik_node.py  shadow_controller_node.py
scara_description/: CMakeLists.txt  package.xml
scara_description/config/: dynamixel_info.yaml  dynamixel_info.yaml.txt  scara_controllers.yaml
scara_description/launch/: bringup_real_robot.launch.py  digital_twin.launch.py  gazebo.launch.py  real_robot.launch.py
scara_description/urdf/: scara_robot.urdf.xacro
snake_arm_control/: package.xml  setup.cfg  setup.py
snake_arm_control/snake_arm_control/: ik_solver_node.py
snake_arm_description/: CMakeLists.txt  package.xml
snake_arm_description/config/: snake_arm_controllers.yaml
snake_arm_description/launch/: gazebo.launch.py
snake_arm_description/urdf/: snake_arm.urdf.xacro
