<?xml version="1.0"?>
<package format="3">
  <name>snake_arm_control</name>
  <version>0.0.0</version>
  <description>Control package for the snake arm robot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
